# portable-git

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  ci-cd.yml  ci.yml
src/: gix.rs  lib.rs  shared.rs
src/plumbing/: main.rs  mod.rs  progress.rs
src/plumbing/options/: free.rs  mod.rs
src/porcelain/: mod.rs
src/porcelain/commands/: add.rs  blame.rs  cat_file.rs  clone.rs  commit.rs  config.rs  describe.rs  diff.rs  fetch.rs  fsck.rs  index_utils.rs  init.rs  log.rs  ls_files.rs  ls_tree.rs  merge.rs  merge_base.rs  mod.rs  remote.rs  reset.rs  rev_list.rs  rev_parse.rs  show.rs  status.rs
