# Based on GitoxideLabs/gitoxide/Cargo.toml
# Source: https://github.com/GitoxideLabs/gitoxide/blob/main/Cargo.toml
# Modifications: Heavy - changed package name/metadata, simplified features, 
#                switched from path to git dependencies, removed unused profiles

[package]
name = "portable-git"
version = "0.0.0-dev"
edition = "2021"

[[bin]]
name = "git"
path = "src/gix.rs"

[features]
default = [
    "pretty-cli",
    "fast",
    "prodash-render-line",
    "gitoxide-core-blocking-client",
    "gitoxide-core-tools-clean",
    "gitoxide-core-tools-archive",
    "gitoxide-core-tools-query",
    "gitoxide-core-tools-corpus",
    "gitoxide-core-tools",
    "http-client-curl",
    "tracing"
]

fast = ["gix/max-performance", "gix/comfort"]
pretty-cli = [
    "gitoxide-core/serde",
    "prodash/progress-tree",
    "prodash/progress-tree-log",
    "prodash/local-time",
    "env_logger/humantime",
    "env_logger/color",
    "env_logger/auto-color"
]
prodash-render-line = ["prodash/render-line", "prodash-render-line-crossterm", "gix/progress-tree"]
prodash-render-line-crossterm = ["prodash-render-line", "prodash/render-line-crossterm", "prodash/signal-hook", "is-terminal", "crosstermion"]
prodash-render-tui = ["prodash/render-tui", "prodash/render-tui-crossterm", "gix/progress-tree", "futures-lite"]
tracing = ["dep:tracing-forest", "dep:tracing-subscriber", "dep:tracing", "gix-features/tracing", "gix-features/tracing-detail"]
gitoxide-core-tools = ["gitoxide-core/organize", "gitoxide-core/estimate-hours", "gitoxide-core-tools-archive", "gitoxide-core-tools-clean"]
gitoxide-core-tools-query = ["gitoxide-core/query"]
gitoxide-core-tools-corpus = ["gitoxide-core/corpus"]
gitoxide-core-tools-archive = ["gitoxide-core/archive"]
gitoxide-core-tools-clean = ["gitoxide-core/clean"]
gitoxide-core-blocking-client = ["gitoxide-core/blocking-client"]
gitoxide-core-async-client = ["gitoxide-core/async-client", "futures-lite"]
http-client-curl = ["gix/blocking-http-transport-curl"]
small = ["pretty-cli", "prodash-render-line", "is-terminal"]

[dependencies]
anyhow = "1.0.98"
once_cell = "1.0"
terminal_size = "0.3"

gitoxide-core = { git = "https://github.com/GitoxideLabs/gitoxide.git" }
gix-features = { git = "https://github.com/GitoxideLabs/gitoxide.git" }
gix = { git = "https://github.com/GitoxideLabs/gitoxide.git", default-features = false }

clap = { version = "4.5.40", features = ["derive", "cargo"] }
clap_complete = "4.5.54"
env_logger = { version = "0.11.8", default-features = false }

prodash = { version = "30.0.1", optional = true }
is-terminal = { version = "0.4.0", optional = true }
crosstermion = { version = "0.14.0", optional = true, default-features = false }
futures-lite = { version = "2.1.0", optional = true }

tracing-forest = { version = "0.1.5", features = ["serde"], optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
tracing = { version = "0.1.37", optional = true }